updated portfolio styling and layout

--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
   <meta charset="UTF-8">
   <title>My Portfolio</title>
   <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="style.css">
+  <button id="toggle-dark-mode">Toggle Dark Mode</button>
+
 </head>
 <body>
   <header>
@@ -26,7 +29,7 @@
 
   <section id="contact">
     <h2>Contact Me</h2>
-    <p>Email: yourname@example.com</p>
+    <p>Email: sohamkadam5505.com</p>
   </section>
 </body>
 </html>
